Add jobs for wordpress-hosting and wordpress-microsites.

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -60,11 +60,19 @@
       - 'php-template'
 
 - project:
-    name: wordpress
+    name: wordpress-microsites
     description-intro: Builds, tests, & deploys the wordpress docker image.
     email-recipients: brian.zoetewey@ccci.org, josh.starcher@cru.org, david.sudarma@cru.org, john.plastow@cru.org
     jobs:
       - 'php-template'
+
+- project:
+    name: wordpress-hosting
+    description-intro: Builds, tests, & deploys the wordpress docker image.
+    email-recipients: brian.zoetewey@ccci.org, josh.starcher@cru.org, david.sudarma@cru.org, john.plastow@cru.org
+    jobs:
+      - 'php-template'
+
 
 - project:
     name: global_registry
