--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -312,6 +312,13 @@
     jobs:
       - 'php-template'
 
+- project:
+    name: snowplow-collector
+    description-intro: Builds, tests, & deploys the snowplow collector docker image.
+    email-recipients: josh.starcher@cru.org
+    jobs:
+      - 'openresty-template'
+
 - job-group:
     name: 'php-template'
     jobs:
