--- a/jobs/java-docker-jobs.yml
+++ b/jobs/java-docker-jobs.yml
@@ -148,13 +148,13 @@
 
     maven:
       root-pom: pom.xml
-      goals: 'clean package -Dimage.tag=${{GIT_COMMIT}}-${{BUILD_NUMBER}} -P CI -DskipTests'
+      goals: 'clean package -Dimage.tag=${{ENVIRONMENT}}-${{BUILD_NUMBER}} -P CI -DskipTests'
       post-step-run-condition: SUCCESS
 
     postbuilders:
       - shell: |
-          docker push 056154071827.dkr.ecr.us-east-1.amazonaws.com/{name}:${{GIT_COMMIT}}-${{BUILD_NUMBER}};
-          docker rmi 056154071827.dkr.ecr.us-east-1.amazonaws.com/{name}:${{GIT_COMMIT}}-${{BUILD_NUMBER}};
+          docker push 056154071827.dkr.ecr.us-east-1.amazonaws.com/{name}:${{ENVIRONMENT}}-${{BUILD_NUMBER}};
+          docker rmi 056154071827.dkr.ecr.us-east-1.amazonaws.com/{name}:${{ENVIRONMENT}}-${{BUILD_NUMBER}};
 
     wrappers:
       - build-name:
