add note on create-jenkins-job config for testing other job config changes
I didn't dig into why running create-jenkins-job doesn't blow away manual changes to create-jenkins-job config, like it does for other jobs.
I suspect jenkins won't let a job be modified if it's currently running a build, but I don't know why this doesn't result in a failure message somewhere visible.

--- a/jobs/simple-jobs.yml
+++ b/jobs/simple-jobs.yml
@@ -195,7 +195,16 @@
 - job:
     name: create-jenkins-jobs
     description: |
-      Create new jenkins jobs.
+      Create and update jenkins jobs.
+
+      This configures/reconfigures all of the jobs in the jenkins-jobs repo.
+
+      Note: there is one exception to the above:
+      executing this job does not rebuild the config for *this* job (create-jenkins-jobs).
+      This is true at the time of writing, anyway, and it's not obvious why it is.
+      Fortunately, this makes it easier to test other job config changes,
+      since manual tweaks to the shell builder below will not be blown away.
+
 
     properties:
       - github:
@@ -210,4 +219,7 @@
           skip-tag: true
 
     builders:
-      - shell: ansible-playbook aws_jenkins_add_jobs.yml --tags="jjb_add_jobs"
+      - shell: |
+        # if this is jenkins-lab.cru.org, and you want to test your jenkins-jobs changes,
+        # manually add `--extra-vars="jenkins_jobs_version=insert-your-jenkins-job-branch"` below.
+        ansible-playbook aws_jenkins_add_jobs.yml --tags="jjb_add_jobs"
