--- a/jobs/java-docker-jobs.yml
+++ b/jobs/java-docker-jobs.yml
@@ -148,13 +148,30 @@
 
     maven:
       root-pom: pom.xml
-      goals: 'clean package -Dimage.tag=${{ENVIRONMENT}}-${{BUILD_NUMBER}} -P CI -DskipTests'
+      goals: 'clean package -Dimage.tag=${{BUILD_NUMBER}} -P CI -DskipTests'
       post-step-run-condition: SUCCESS
 
     postbuilders:
       - shell: |
-          docker push 056154071827.dkr.ecr.us-east-1.amazonaws.com/{name}:${{ENVIRONMENT}}-${{BUILD_NUMBER}};
-          docker rmi 056154071827.dkr.ecr.us-east-1.amazonaws.com/{name}:${{ENVIRONMENT}}-${{BUILD_NUMBER}};
+
+          # strip off the '<remote-name>/' prefix, typically 'origin'
+          BRANCH_NAME="${{GIT_BRANCH#*/}}"
+
+          case "$BRANCH_NAME" in
+            master) ENVIRONMENT="production" ;;
+            *) ENVIRONMENT="staging" ;;
+          esac
+
+          DOCKER_TAG="${{ENVIRONMENT}}-${{BUILD_NUMBER}}"
+
+          DOCKER_REPO="056154071827.dkr.ecr.us-east-1.amazonaws.com"
+
+          docker tag \
+            ${{DOCKER_REPO}}/{name}:${{BUILD_NUMBER}} \
+            ${{DOCKER_REPO}}/{name}:${{DOCKER_TAG}};
+          docker push ${{DOCKER_REPO}}/{name}:${{DOCKER_TAG}};
+          docker rmi ${{DOCKER_REPO}}/{name}:${{DOCKER_TAG}};
+          docker rmi ${{DOCKER_REPO}}/{name}:${{BUILD_NUMBER}};
 
     wrappers:
       - build-name:
