change JJB dependency from a local path to a git ref
Now that modifications-for-cru-jenkins has support for pipelines,
we'll point to it in the Pipfile.

Note: at this time, the ansible script for building doesn't use this Pipfile;
but now this Pipfile is consistent with what the script actually does.

--- a/Pipfile
+++ b/Pipfile
@@ -13,7 +13,7 @@ name = "pypi"
 
 requests = "*"
 pyyaml = "*"
-"7726717" = {path = "../jenkins-job-builder/", editable = true}
+jenkins-job-builder = {ref = "modifications-for-cru-jenkins", git = "https://github.com/CruGlobal/jenkins-job-builder.git", editable = true}
 
 
 [requires]
