--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -392,6 +392,7 @@
       - inject:
           properties-content: |
             LD_LIBRARY_PATH=/opt/oracle/instantclient_11_2
+    node: linux
     scm:
       - git:
           branches:
