remove 'test' suffix from job
This will define the real job, now, not a test duplicate.

--- a/jobs/pipeline-jobs.yml
+++ b/jobs/pipeline-jobs.yml
@@ -1,6 +1,6 @@
 
 - job:
-    name: familylife-data-api-mbp-test
+    name: familylife-data-api-mbp
     description: |
       FamilyLife External APIs (ASP.NET Web API)
     project-type: multibranch-pipeline
