add new job for snowplow s3 loader

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -325,6 +325,13 @@
     email-recipients: josh.starcher@cru.org
     jobs:
       - 'openresty-template'
+      
+- project:
+    name: snowplow-s3loader
+    description-intro: Builds, tests, & deploys the snowplow s3 Loader docker image.
+    email-recipients: josh.starcher@cru.org, luis.rodriguez@cru.org
+    jobs:
+      - 'openresty-template'
 
 - job-group:
     name: 'php-template'
