--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -342,7 +342,14 @@
 
 - project:
     name: snowplow-dataflow
-    description-intro: Builds, tests, & deploys the snowplow s3 Loader docker image.
+    description-intro: Builds, tests, & deploys the snowplow dataflow docker image.
+    email-recipients: josh.starcher@cru.org, luis.rodriguez@cru.org
+    jobs:
+      - 'openresty-template'
+
+- project:
+    name: snowplow-enrich
+    description-intro: Builds, tests, & deploys the snowplow enrich docker image.
     email-recipients: josh.starcher@cru.org, luis.rodriguez@cru.org
     jobs:
       - 'openresty-template'
