add staging, now

--- a/jobs/pipeline-jobs.yml
+++ b/jobs/pipeline-jobs.yml
@@ -44,4 +44,4 @@
           behaviors:
             discover-branches:
             filter-by-name-with-wildcards:
-              include: kma-6-jenkins-deployment
+              include: staging kma-6-jenkins-deployment
