--- a/jobs/pipeline-jobs.yml
+++ b/jobs/pipeline-jobs.yml
@@ -25,7 +25,6 @@
       Scale-of-belief lambda (serverless) project.
     jobs:
       - 'pipeline-template':
-          branches: staging kma-6-jenkins-deployment
 
 
 - project:
@@ -34,7 +33,7 @@
       Scale-of-belief lambda/serverless project for importing survey spreadsheets.
     jobs:
       - 'pipeline-template':
-          branches: production kma-6-add-jenkins-deployments
+          branches: production
 
 
 - job-template:
