--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -361,6 +361,13 @@
     jobs:
       - 'openresty-template'
 
+- project:
+    name: airflow
+    description-intro: Builds, tests, & deploys the apache airflow docker image.
+    email-recipients: josh.starcher@cru.org, luis.rodriguez@cru.org
+    jobs:
+      - 'openresty-template'
+
 - job-group:
     name: 'php-template'
     jobs:
