Job name has to match repo name

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -362,7 +362,7 @@
       - 'openresty-template'
 
 - project:
-    name: airflow
+    name: docker-airflow
     description-intro: Builds, tests, & deploys the apache airflow docker image.
     email-recipients: josh.starcher@cru.org, luis.rodriguez@cru.org
     jobs:
