--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -237,6 +237,13 @@
     email-recipients: josh.starcher@cru.org
     jobs:
       - 'rails-template'
+      
+- project:
+    name: staff-conf-onsite17
+    description-intro: Builds, tests, & deploys the staff conference onsite docker image.
+    email-recipients: josh.starcher@cru.org
+    jobs:
+      - 'rails-template'
 
 - project:
     name: staffportal_api
