Build script for syslog-fluentd is build.sh

--- a/jobs/simple-jobs.yml
+++ b/jobs/simple-jobs.yml
@@ -173,7 +173,7 @@
       - github
 
     builders:
-      - shell: ./build.rb --push
+      - shell: ./build.sh
 
     publishers:
       - conditional-publisher:
