--- a/jobs/java-docker-jobs.yml
+++ b/jobs/java-docker-jobs.yml
@@ -41,7 +41,7 @@
       currently, only staging/master images get pushed to ECR).
 
     parameters:
-      - git:
+      - git-parameter:
           name: BRANCH_SPECIFIER
           description: |
             If specified, jenkins will use this git branch to build.
@@ -49,9 +49,8 @@
             that seems most likely to be the one you want built.
             This is usually either the branch that has commits in it that jenkins hasn't 'seen' yet,
             or, if there are none of those, the most recently-built branch.
-          type: branch
-          sort: none
-          default: origin/*
+          type: PT_BRANCH
+          defaultValue: origin/*
 
     properties:
       - github:
