add new aem_docker build job, to create and deploy aem dispatcher.

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -379,6 +379,14 @@
     jobs:
       - 'openresty-template'
 
+- project:
+    name: aem_docker
+    description-intro: Builds, tests, & deploys the AEM apache dispatcher image.
+    email-recipients: luis.rodriguez@cru.org
+    deploy-production-job: aem-dispatcher-deploy
+    jobs:
+      - 'openresty-template'
+
 - job-group:
     name: 'php-template'
     jobs:
