--- a/jobs/simple-jobs.yml
+++ b/jobs/simple-jobs.yml
@@ -154,7 +154,7 @@
           extra_vars_option=""
           if grep --quiet 'url=https://jenkins-lab.cru.org' /var/lib/jenkins/jenkins-jobs/jenkins_jobs.ini; then
             echo "This appears to be jenkins-lab; running from jenkins-lab branch"
-            extra_vars_option='--extra-vars="jenkins_jobs_version=jenkins-lab"'
+            extra_vars_option='--extra-vars=jenkins_jobs_version=jenkins-lab'
           else
             echo "This appears to be jenkins-prod; running from master branch"
           fi
