setup staging job same as production job. Staging should now deploy 2 services

--- a/jobs/app-jobs.yml
+++ b/jobs/app-jobs.yml
@@ -383,6 +383,7 @@
     name: aem_docker
     description-intro: Builds, tests, & deploys the AEM apache dispatcher image.
     email-recipients: luis.rodriguez@cru.org
+    deploy-staging-job: aem-dispatcher-deploy
     deploy-production-job: aem-dispatcher-deploy
     jobs:
       - 'openresty-template'
